--- a/notes.Rmd
+++ b/notes.Rmd
@@ -16,11 +16,12 @@ bibliography: samplebib.bib
 
 This PhD thesis examines the use of present-day geospatial data and advanced computational techniques to study maritime human movement during the early Holocene in the Eastern Mediterranean. As we examine a prehistoric time for which there are no available data, apart from few documented assumptions which can be found nowadays regarding vessel travel details (duration, path, etc.), this topic is considered challenging for both geoscientists and archaeologists. Towards that end, Agent-Based Modeling and Simulation (ABMS) is the most appropriate modeling approach and its adoption has increased dramatically during the last decade through their use in a wide spectrum of disciplines (Bazghandi 2012).
 
-The aim of the dissertation is the development of an innovative Spatial Agent Based Model (SABM) to study maritime movement based on hypotheses regarding relevant factors - (modern) weather conditions, characteristics of supposed floating means, ability of a navigator, etc. The proposed SABM constitutes a simulation model in which autonomous agents present different behavioral characteristics, interact with others (agents), their environment and constantly changing their behavior depending on their learning ability, while it contains acquisition mechanisms of spatial knowledge within the context of behavioral geography, i.e the way in which agents respond to their geographical environments through their cognitive representations (Denis and Loomis 2007). The model will be also able to simulate trajectories within the (reconstructed) maritime space of the prehistoric Mediterranean, assess the potential connectivity between possible starting and destination areas, and the time periods within a year as well, where possible travels would have an increased success rate. To better understand the resulting maritime routes, methods and techniques will be adopted from the field of data mining, and in particular routing / trajectory learning methods (Qi and Zheng 2016; Mazimpaka and Timpf 2016).
-
 ```{r, echo = FALSE, out.width="100%", fig.cap="Proposed Workflow"}
 knitr::include_graphics('workflow.png')
 ```
+
+The aim of the dissertation is the development of an innovative Spatial Agent Based Model (SABM) to study maritime movement based on hypotheses regarding relevant factors - (modern) weather conditions, characteristics of supposed floating means, ability of a navigator, etc. The proposed SABM constitutes a simulation model in which autonomous agents present different behavioral characteristics, interact with others (agents), their environment and constantly changing their behavior depending on their learning ability, while it contains acquisition mechanisms of spatial knowledge within the context of behavioral geography, i.e the way in which agents respond to their geographical environments through their cognitive representations (Denis and Loomis 2007). The model will also be able to simulate trajectories within the (reconstructed) maritime space of the prehistoric Mediterranean, assess the potential connectivity between possible starting and destination areas, and the time periods within a year as well, where possible travels would have an increased success rate. To better understand the resulting maritime routes, methods and techniques will be adopted from the field of data mining, and in particular routing / trajectory learning methods (Qi and Zheng 2016; Mazimpaka and Timpf 2016).
+
 
 # Visualization
 
@@ -31,22 +32,24 @@ knitr::include_graphics('alibaba_network.png')
 ```
 
 
-Although the aforementioned example is not related to maritime trajectories, it is worth mentioning that it constitutes a really nice visual representation. Within the aspect of my PhD topic, the generated data (trajectories) will be visualised in such way highlighting the resulting patterns and connections between them and the external information (behavioral actions / environmental factors). To this end, we will also explore the possibility of linking them to existing archaeological finds in the wider region of the Eastern Mediterranean. To make patterns distinct from each other, different colors will be used depending on the possible maritime routes (port of origin, port of departure, speed, environmental factors, etc.).
+Although the aforementioned example is not related to maritime trajectories, it is worth mentioning that it constitutes a really nice visual representation. Within the aspect of this PhD topic, the generated data (trajectories) will be visualised in such way highlighting the resulting patterns and connections between them and the external information (behavioral actions / environmental factors). To this end, we will also explore the possibility of linking them to existing archaeological finds in the wider region of the Eastern Mediterranean. To make patterns distinct from each other, different colors will be used depending on the possible maritime routes (port of origin, port of departure, speed, environmental factors, etc.).
 
 
 # Reproducibility
 
-To make my research widely reproducible by the research community we will take into consideration the Reproducible Guidelines as those were set by the AGILE Association. Research's data (trajectories) along with a well-written documentation will be provided in a non-proprietary format, i.e. txt files that will be made available at a public repository that conforms to open-access regulations. The developed SABM model or snippets of the code will become available online under an MIT license in order to ensure that proper attribution will be given to its creator, whereas several software libaries and packages used will be properly aknowledged throughout the project and model's documentation text. Publications that will be derived from the proposed research will be submitted in open-access journals / proceedings in order to be publicly available, hence avoiding any publisher restrictions that might limit their availability to the scientific community.  
+In order to make the research more widely reproducible by the scientific community we will take into consideration the Reproducible Guidelines as those were set by the AGILE Association. Research's data (trajectories) along with a well-written documentation will be provided in a non-proprietary format, i.e. txt files that will be made available at a public repository that conforms to open-access regulations. The developed SABM model or snippets of the code will become available online under an MIT license in order to ensure that proper attribution will be given to its creator, whereas several software libaries and packages used will be properly aknowledged throughout the project and model's documentation text. Publications that will be derived from the proposed research will be submitted in open-access journals / proceedings in order to be publicly available, hence avoiding any publisher restrictions that might limit their availability to the scientific community.  
 
 # Science Communication
 
-My conducted research targets mainly two groups; geoscientists and archaeologists. As it is perceived these two groups do not have common points of reference as their expertise majorly differs. To better communicate my research to the first group, the functions and variables of the model need to be highlighted as well as the resulting patterns in relation to the environmental data and shoreline patterns so to better understand the dynamics of the SABM along its potentials and drawbacks as well, while for the latter group the visualisation of the results should be focused on the archaological aspect supporting (or not) any assumptions pertaining to the possible maritime connections and population exchange.
+The conducted research of this PhD dissertation targets mainly two groups; geoscientists and archaeologists. As it is perceived these two groups do not have common points of reference as their expertise majorly differs. To better communicate the research to the first group, the functions and variables of the model need to be highlighted as well as the resulting patterns in relation to the environmental data and shoreline patterns so to better understand the dynamics of the SABM along its potentials and drawbacks as well, while for the latter group the visualisation of the results should be focused on the archaological aspect supporting (or not) any assumptions pertaining to the possible maritime connections and population exchange.
 
 This dissertation is expected to: (a) expand the application of spatial agent-based models in the maritime space, thus contributing to the further development of spatial analysis and modeling, and (b) become an educational tool (serious game) for the development of spatial knowledge through the simulation of sea routes in order to better understand the various factors that affect human mobility in the marine space.
 
 # Acknowledgments {-}
 
 Author would like to express his gratitude to Prof. Phaedon Kyriakidis for guiding and motivating him during his PhD as well as for constantly stimulating his scientific curiosity through discussions.
+
+The doctoral research of the author is supported by Cyprus State Institution (IKYK) in the form of scholarship for PhD studies (2018-2021).
 
 
 # References {-}
