--- a/notes.Rmd
+++ b/notes.Rmd
@@ -25,12 +25,7 @@ The aim of the dissertation is the development of an innovative Spatial Agent Ba
 
 # Visualization
 
-AliBaba team has created a visual representation of people mobility using particle flow (Figure 2), where the different colors show the direction they move as well as their velocity. The number of particles in the grid represents the number of trajectories, while the higher the speed, the closer the color is to blue, and the lower the speed, the closer the color is to red. 
-
-```{r, echo = FALSE, out.width="100%", fig.cap="AliBaba's Population Mobility, Source: \\href{https://hackernoon.com/ahead-of-the-crowd-visualizing-trajectory-data-with-datav-13112b07bcf9}{https://hackernoon.com/ahead-of-the-crowd-visualizing-trajectory-data-with-datav-13112b07bcf9}"}
-knitr::include_graphics('alibaba_network.png')
-```
-
+AliBaba using their data visualization tool named DataV (AliBaba 2018) employed particle flow to illustrate people mobility by analyzing data derived from the signals of citizens' mobile phones within a ten minute period, where the moving 	direction of the particles indicates humans' movement in space, while the different colors of the generated trajectories represent the resulting fluctuations in speed of their movement.
 
 Although the aforementioned example is not related to maritime trajectories, it is worth mentioning that it constitutes a really nice visual representation. Within the aspect of this PhD topic, the generated data (trajectories) will be visualised in such way highlighting the resulting patterns and connections between them and the external information (behavioral actions / environmental factors). To this end, we will also explore the possibility of linking them to existing archaeological finds in the wider region of the Eastern Mediterranean. To make patterns distinct from each other, different colors will be used depending on the possible maritime routes (port of origin, port of departure, speed, environmental factors, etc.).
 
@@ -53,6 +48,8 @@ The doctoral research of the author is supported by Cyprus State Institution (IK
 
 
 # References {-}
+
+_AliBaba. 2018. “Ahead of the Crowd: Visualizing Trajectory Data with DataV.” https://hackernoon.com/ahead-of-the-crowd-visualizing-trajectory-data-with-datav-13112b07bcf9 (May 9, 2020)_
 
 _Bazghandi, A. 2012. “Techniques, Advantages and Problems of Agent Based Modeling for Traffic Simulation.” International Journal of Computer Science Issues 9(1): 115–19_
 
